--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
     <maven.compiler.release>17</maven.compiler.release>
   </properties>
 
+  <distributionManagement>
+  <repository>
+    <id>github</id>
+    <name>GitHub Packages</name>
+    <url>https://maven.pkg.github.com/USERNAME/REPO_NAME</url>
+  </repository>
+</distributionManagement>
   <dependencyManagement>
     <dependencies>
       <dependency>
