--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -16,10 +16,10 @@ jobs:
           distribution: temurin
       - name: create .env file
         run: |
-          echo "gmail_username=${{ secrets.gmail_username }}" >> .env
-          echo "gmail_app_password=${{ secrets.gmail_app_password }}" >> .env
+          echo "gmail_username=${{ secrets.GMAIL_USERNAME }}" >> .env
+          echo "gmail_app_password=${{ secrets.GMAIL_APP_PASSWORD }}" >> .env
           echo "GH_ACTOR=${{ vars.GH_ACTOR }}" >> .env
           echo "GH_TOKEN=${{ secrets.GH_TOKEN }}" >> .env
-          
+
       - name: Publish
         run: mvn deploy
