--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment: .env
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK
@@ -16,13 +17,13 @@ jobs:
           distribution: temurin
       - name: Print GH_ACTOR
         env:
-          GH_ACTOR: ${{ env.GH_ACTOR }}
+          GH_ACTOR: ${{ vars.GH_ACTOR }}
         run: echo "GH_ACTOR=$GH_ACTOR"
       - name: create .env file
         env:
             GMAIL_USERNAME: ${{ secrets.GMAIL_USERNAME }}
             GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
-            GH_ACTOR: ${{ env.GH_ACTOR }}
+            GH_ACTOR: ${{ vars.GH_ACTOR }}
             GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           echo "gmail_username=$GMAIL_USERNAME" >> .env 
