--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -25,10 +25,6 @@ jobs:
             GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
             GH_ACTOR: ${{ vars.GH_ACTOR }}
             GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          echo "gmail_username=$GMAIL_USERNAME" >> .env 
-          echo "gmail_app_password=$GMAIL_APP_PASSWORD" >> .env
-          echo "GH_ACTOR=$GH_ACTOR" >> .env
-          echo "GH_TOKEN=$GH_TOKEN" >> .env
+        run: echo "gmail_username=$GMAIL_USERNAME" >> .env && echo "gmail_app_password=$GMAIL_APP_PASSWORD" >> .env && echo "GH_ACTOR=$GH_ACTOR" >> .env && echo "GH_TOKEN=$GH_TOKEN" >> .env
       - name: Publish
         run: mvn deploy
