--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <repository>
     <id>github</id>
     <name>GitHub Packages</name>
-    <url>https://maven.pkg.github.com/USERNAME/REPO_NAME</url>
+    <url>https://maven.pkg.github.com/colozzacristian/smtpClient</url>
   </repository>
 </distributionManagement>
   <dependencyManagement>
